--- a/hello-react/package.json
+++ b/hello-react/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "/pokedex-react",
   "scripts": {
     "dev": "concurrently \"npm run start:server\" \"npm run start:frontend\"",
     "build": "vite build",
