--- a/hello-react/package.json
+++ b/hello-react/package.json
@@ -13,9 +13,16 @@
     "start:server": "cd server && npm run start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.6",
+    "@mui/material": "^7.3.1",
+    "bootstrap": "^5.3.8",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
-    "react-router": "^7.8.0"
+    "react-router": "^7.8.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
