--- a/hello-expressjs/package.json
+++ b/hello-expressjs/package.json
@@ -14,7 +14,8 @@
   "packageManager": "pnpm@10.16.1",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
