--- a/hello-expressjs/package.json
+++ b/hello-expressjs/package.json
@@ -6,13 +6,15 @@
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "buildMapData": "node nov5_valorant-api-server/scripts/fetch_parse_map_data.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.16.1",
   "dependencies": {
+    "axios": "^1.13.2",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
