--- a/hello-expressjs/package.json
+++ b/hello-expressjs/package.json
@@ -15,6 +15,7 @@
   "packageManager": "pnpm@10.16.1",
   "dependencies": {
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
