--- a/nov29-fullstack-app/server/package.json
+++ b/nov29-fullstack-app/server/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "better-sqlite3": "^12.5.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
