--- a/nov29-fullstack-app/server/package.json
+++ b/nov29-fullstack-app/server/package.json
@@ -14,11 +14,13 @@
   "packageManager": "pnpm@10.16.1",
   "pnpm": {
     "onlyBuiltDependencies": [
-      "better-sqlite3"
+      "better-sqlite3",
+      "sqlite3"
     ]
   },
   "dependencies": {
     "better-sqlite3": "^12.5.0",
+    "connect-sqlite3": "^0.9.16",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-session": "^1.18.2"
