--- a/fullstack-blog-app/server/package.json
+++ b/fullstack-blog-app/server/package.json
@@ -23,7 +23,8 @@
     "connect-sqlite3": "^0.9.16",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "express-session": "^1.18.2"
+    "express-session": "^1.18.2",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
